2006-12-18	fabian

	* Updated the "term type" list. Removed xterm that doesn't work for many keys.
	* Added a window border when there's no tab bar at the bottom of screen.
	* Fixed a reverse bold color bug.
	
2006-12-15	fabian

	* Fixed the tabbar-disappearing bug (#1613110).
	* Set echok when launching new sessions (#1472673).
	
2006-12-14	fabian

	* Fixed another bold color bug.
	* Changed the default for "use default title with dynamic title" to NO.
	
2006-12-12	fabian

	* Fixed bold color bug.
	* Changed the wording for the "dynamic title" option.
	
2006-12-11	fabian

	* Fixed transparency bug #1609022.
	
2006-12-8	fabian

	* Fixed a wrapping porblem under ANSI terminals.
	* Incorporated the data processing thread into the data reading thread.
	* Find panel now will set the string system-wide.
	* Added an option in the terminal profile to allow default session name not to be overwritten
	  by dynamic tab name changes.
	* Double click on a parenthesis now selects everything between the pair of parenthesis.
	
2006-12-7	fabian

	* Fixed bug that loses changes to 'Characters considered parts of word' text field.
	* Fixed the "show cursor" behavior in RESET.

2006-12-6	fabian

	* An attempt to fix the closing window confirmation panel.
	
2006-12-5	fabian

	* Added support for xterm's 256-color mode
	* Fixed tab order bug
	
2006-12-4	fabian

	* Fixed a selection bug (BUG #1608727).
	* Added new cursor types (underline and vertical).
	* Fixed auto-check of updates setting bug (BUG #1599702).
	* Release 0.9.4 for Tiger.
	
2006-12-2	fabian

	* Fixed a RESET and clearScreen bug.
	
2006-12-1	fabian

	* Stop scrolling with new output when users manually move back to the history buffer.
	* Added support to launch a google session with the selected contents from the contextual menu. 
	  To customize your search command, do this (using yahoo as an example):
		defaults write iTerm SearchCommand -string "http://search.yahoo.com/search?p=%@"
	* Fixed a clearScreen bug.