@@ -63,7 +63,7 @@ works mostly the way you would expect. Xterm mouse reporting is supported (there
 profile to switch it on and off). Hold down Option key will temporarily disable xterm mouse reporting, so that
 you can select and paste text. Double-click selects a word, triple-click selects a line. Quadruple-click, well,
 does nothing yet. Shift key lets you extend a selection. Ctrl key mimics the right-click. Command-click launchs
-a URL. Command key is also used to drag selected text. If your mouse has a wheel, that works too.
+a URL. Command key is also used to drag and drop selected text. If your mouse has a wheel, that works too.
 <BR><BR>
 
 <STRONG>Keyboard</STRONG><BR><BR>
